# CPP-Example

./: README.md
license-demo/: CMakeLists.txt  README.md  build.bat  build.sh  license_checker.cpp  license_checker.h  main.cpp
